# clock-ha-orchestrator

./: .env.example  .gitignore  AI_AGENT_HANDOFF.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config_loader.py  main.py  runtime.py  settings.py
app/api/: routes.py
app/clock/: __init__.py  db_sync.py  fixtures.py  interface.py  normalizer.py  rest.py  sync.py
app/dashboard/: __init__.py  generator.py
app/domain/: enums.py  models.py  state_machine.py
app/g301_adapter/: __init__.py  planner.py  registers.py  simulator.py  transport.py  worker.py
app/mqtt/: __init__.py  client.py  discovery.py  publisher.py  schemas.py  topics.py
app/outbox/: __init__.py  service.py
app/persistence/: models.py  session.py
app/policy/: commands.py  control.py  engine.py
app/system/: __init__.py  state.py
config/: clock.mapping.example.yaml  policies.example.yaml  rooms.example.yaml
docs/: architecture.md  clock-api-mapping.md  future-adapter-contract.md  g301-register-map.md  mqtt-contract.md  operations-runbook.md
homeassistant/: configuration.example.yaml
homeassistant/dashboards/: hotel-reception.yaml
migrations/: env.py
migrations/versions/: 20260617_0001_initial.py  20260617_0002_sync_constraints.py  20260617_0003_outbox_retry_claims.py  20260618_0004_override_booking_boundary.py  20260618_0005_entrance_registry.py
mosquitto/config/: acl.example  mosquitto.conf  passwords.example
tests/: conftest.py
tests/unit/: test_clock_normalizer.py  (+8 more)
tools/: generate_dashboard.py
