[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clock-ha-orchestrator"
version = "0.1.0"
description = "Clock PMS+ to Home Assistant hardware-neutral hotel automation orchestrator"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.111",
  "httpx>=0.27",
  "paho-mqtt>=2.1",
  "prometheus-client>=0.20",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "structlog>=24.1",
  "tenacity>=8.3",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["paho.*", "yaml.*"]
ignore_missing_imports = true
